tests/struct_field_defaults_forward_ref_bad.stderr
tests/struct_field_defaults_forward_ref_bad.hop:3:10: error: HOP2045: field default references later field 'b'
