tests/struct_field_defaults_forward_ref_bad.hop
// Verifies struct field defaults forward reference is rejected.
struct Bad {
	a i32 = b
	b i32
}
